// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsCount renders default reliably 1`] = `
<View
  accessibilityLabel="1 comment"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#454545",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "marginLeft": 6,
        "textAlign": "left",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`CommentsCount renders filled reliably 1`] = `
<View
  accessibilityLabel="1 comment"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#454545",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "marginLeft": 6,
        "textAlign": "left",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`CommentsCount renders white reliably 1`] = `
<View
  accessibilityLabel="1 comment"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 14,
        },
        null,
        {
          "fontFamily": "INatIcon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <Text
    maxFontSizeMultiplier={2}
    style={
      {
        "color": "rgba(255, 255, 255, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "marginLeft": 6,
        "textAlign": "left",
      }
    }
  >
    1
  </Text>
</View>
`;
